[package]
name = "vm-generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "container-vm-provisioner"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
