[package]
name = "vm-provisioner"
version = "0.1.0"
edition = "2021"
description = "Lightweight VM isolation system with seamless windowing"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"

# Wayland dependencies for window management
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client"] }
smithay-client-toolkit = "0.18"

# Additional utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.12"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "vm-provisioner"
path = "src/main.rs"
